--- a/config/carrierwave.yml
+++ b/config/carrierwave.yml
@@ -1,12 +1,12 @@
 
 test:
-  storage: file
+  storage: !ruby/sym file
 
 development:
-  storage: file
+  storage: !ruby/sym file
 
 production:
-  storage: right_s3
+  storage: !ruby/sym right_s3
   s3_access_key_id: XYZ
   s3_secret_access_key: XYZ
   s3_bucket: assets.example.com
